
python_sources = [
  '__init__.py',
  'akima.py',
  'constants.py',
  'cross_sections.py',
  'csystem.py',
  'cylinder_member.py',
  'distribution.py',
  'environment.py',
  'fileIO.py',
  'frustum.py',
  'manufacturing.py',
  'turbine_class.py',
  'turbine_constraints.py',
  'utilities.py',
  'utilization_api.py',
  'utilization_constraints.py',
  'utilization_dnvgl.py',
  'utilization_eurocode.py',
  'wind_wave_drag.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/commonse'
)
