
python_sources = [
  '__init__.py',
  'gui.py',
  'schema2rst.py',
  'validation.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/inputs'
)

data_files = [
  'analysis_schema.yaml',
  'geometry_schema.yaml',
  'modeling_schema.yaml',
  ]

py3.install_sources(
  data_files,
  subdir: 'wisdem/inputs',
)
