
python_sources = [
  '__init__.py',
  'orbit/phases/install/$file.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/install_phase.py'
)
__init__.py
_version.py
api
config.py
core
correct_imports.sh
manager.py
meson.build
parametric.py
phases
supply_chain.py
__init__.py
_version.py
api
config.py
core
correct_imports.sh
manager.py
meson.build
meson.build-s
parametric.py
phases
supply_chain.py
