
python_sources = [
  '__init__.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test'
)

subdir('test_ccblade')
subdir('test_commonse')
subdir('test_drivetrainse')
subdir('test_examples')
subdir('test_fixed_bottomse')
subdir('test_floatingse')
subdir('test_gluecode')
subdir('test_landbosse')
subdir('test_nrelcsm')
subdir('test_optimization_drivers')
subdir('test_orbit')
subdir('test_plant_financese')
subdir('test_pyframe3dd')
subdir('test_rotorse')
subdir('test_towerse')
subdir('test_yaml')
