
python_sources = [
  '__init__.py',
  'CsvGenerator.py',
  'GridSearchTree.py',
  'OpenMDAODataframeCache.py',
  'WeatherWindowCSVReader.py',
  'XlsxOperationException.py',
  'XlsxValidator.py',
  'landbosse.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/landbosse/landbosse_omdao'
)
