
python_sources = [
  '__init__.py',
  'CollectionCost.py',
  'CostModule.py',
  'DefaultMasterInputDict.py',
  'DevelopmentCost.py',
  'ErectionCost.py',
  'FoundationCost.py',
  'GridConnectionCost.py',
  'ManagementCost.py',
  'Manager.py',
  'SitePreparationCost.py',
  'SubstationCost.py',
  'TransportCost.py',
  'TransportCost.py',
  'WeatherDelay.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/landbosse/model'
)
