
python_sources = [
  '__init__.py',
  'test_ccblade.py',
  'test_gradients.py',
  'test_om_gradients.py',
  'test_polar.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_ccblade'
)

data_files = [
  'smaller_dataset.npz'
  ]

py3.install_sources(
  data_files,
  subdir: 'wisdem/test/test_ccblade',
)

