
python_sources = [
  '__init__.py',
  'test_api.py',
  'test_cross_sections.py',
  'test_csystem.py',
  'test_distribution.py',
  'test_environment.py',
  'test_fileIO.py',
  'test_frustum.py',
  'test_member.py',
  'test_utilities.py',
  'test_wind_wave.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_commonse'
)
