
python_sources = [
  '__init__.py',
  'test_components.py',
  'test_drive_structure.py',
  'test_drivetrainse.py',
  'test_gearbox.py',
  'test_generator_driver.py',
  'test_generator_models.py',
  'test_hub.py',
  'test_layout.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_drivetrainse'
)
