
python_sources = [
  '__init__.py',
  'test_drivers.py',
  'test_gc_loadinputs.py',
  'test_gc_modified_yaml.py',
  'test_gc_yaml_floating.py',
  'test_gluecode.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_gluecode'
)


data_files = [
  'modified_modeling_options.yaml',
  ]

py3.install_sources(
  data_files,
  subdir: 'wisdem/test/test_gluecode',
)

