
python_sources = [
  '__init__.py',
  'conftest.py',
  'test_config_management.py',
  'test_design_install_phase_interactions.py',
  'test_parametric.py',
  'test_project_manager.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_orbit'
)

subdir('api')
subdir('core')
subdir('data')
subdir('phases')
