
python_sources = [
  '__init__.py',
  'test_precomp.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_precomp'
)

data_files = [
  'section_dump_iea15mw.pkl',
  'section_dump_nrel5mw.pkl',
  ]

py3.install_sources(
  data_files,
  subdir: 'wisdem/test/test/test_precomp',
)



