
python_sources = [
  '__init__.py',
  '_cables.py',
  'array_system_design.py',
  'design_phase.py',
  'electrical_export.py',
  'export_system_design.py',
  #'gbf_design.py',
  #'jacket_design.py',
  'monopile_design.py',
  'mooring_system_design.py',
  'oss_design.py',
  'oss_design_floating.py',
  'scour_protection_design.py',
  'semi_submersible_design.py',
  'spar_design.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/orbit/phases/design'
)
