
python_sources = [
  '__init__.py',
  'test_array_system_design.py',
  'test_cable.py',
  'test_export_system_design.py',
  'test_monopile_design.py',
  'test_mooring_system_design.py',
  'test_oss_design.py',
  'test_scour_protection_design.py',
  'test_semisubmersible_design.py',
  'test_spar_design.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_orbit/phases/design'
)
