
python_sources = [
  '__init__.py',
  'test_install_phase.py',
]

py3.install_sources(
  python_sources,
  subdir: 'wisdem/test/test_orbit/phases/install'
)

subdir('cable_install')
subdir('jacket_install')
subdir('monopile_install')
subdir('mooring_install')
subdir('oss_install')
subdir('quayside_assembly_tow')
subdir('scour_protection_install')
subdir('turbine_install')
